stopped carousel auto slide, fixed image size page jump issue

--- a/day-10/css/style.css
+++ b/day-10/css/style.css
@@ -17,7 +17,7 @@
 }
 
 #carousel .test-carousel {
-  width: 40%;
+  width: 30%;
   margin: auto;
 }
 
